--- a/SunChaser/app/src/main/res/values/strings.xml
+++ b/SunChaser/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">SunChaser</string>
+    <string name="home">Home</string>
+    <string name="favorites">Favorites</string>
+    <string name="map">Map</string>
+    <string name="setting">Settings\n</string>
+    <string name="navigation_drawer_open">Navigation Drawer Open</string>
+    <string name="navigation_drawer_close">Navigation Drawer Close</string>
+
 </resources>
