--- a/SunChaser/app/src/main/res/values/strings.xml
+++ b/SunChaser/app/src/main/res/values/strings.xml
@@ -6,5 +6,16 @@
     <string name="setting">Settings\n</string>
     <string name="navigation_drawer_open">Navigation Drawer Open</string>
     <string name="navigation_drawer_close">Navigation Drawer Close</string>
+    <string name="favorite_locations">Favorite Locations</string>
+    <string name="add_to_favorites">Add to Favorites</string>
+    <string name="hourly_forecast">HOURLY FORECAST</string>
+    <string name="weather_statistics">WEATHER STATISTICS</string>
+    <string name="_5_day_forecast">5-DAY FORECAST</string>
+    <string name="are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="humidity">HUMIDITY</string>
+    <string name="wind">WIND</string>
+    <string name="pressure">PRESSURE</string>
 
 </resources>
