--- a/SunChaser/app/src/main/res/values/strings.xml
+++ b/SunChaser/app/src/main/res/values/strings.xml
@@ -17,5 +17,14 @@
     <string name="humidity">HUMIDITY</string>
     <string name="wind">WIND</string>
     <string name="pressure">PRESSURE</string>
+    <string name="alarm">Alarm</string>
+    <string name="select_date">Select Date</string>
+    <string name="select_start_time">Select Start Time</string>
+    <string name="alarm_sound_notification">Alarm Sound / Notification</string>
+    <string name="add_alert">Add Alert</string>
+    <string name="duration_minutes">Duration (minutes):</string>
+    <string name="select_end_time">Select End Time</string>
+    <string name="active">Active</string>
+    <string name="are_you_sure_you_want_to_delete_this_alert">Are you sure you want to delete this Alert</string>
 
 </resources>
