--- a/SunChaser/app/src/main/res/values/strings.xml
+++ b/SunChaser/app/src/main/res/values/strings.xml
@@ -26,5 +26,14 @@
     <string name="select_end_time">Select End Time</string>
     <string name="active">Active</string>
     <string name="are_you_sure_you_want_to_delete_this_alert">Are you sure you want to delete this Alert</string>
-
+    <string name="settings">Settings</string>
+    <string name="location_source">Location Source</string>
+    <string name="gps">GPS</string>
+    <string name="temperature_unit">Temperature Unit</string>
+    <string name="wind_speed_unit">Wind Speed Unit</string>
+    <string name="language">Language</string>
+    <string name="average_temperature">Average Temperature</string>
+    <string name="max_temperature">Max Temperature</string>
+    <string name="min_temperature">Min Temperature</string>
+    <string name="average_humidity">Average Humidity</string>
 </resources>
